--- a/src/sections/blog/blog.pug
+++ b/src/sections/blog/blog.pug
@@ -3,7 +3,7 @@ mixin SectionBlog()
         .container 
             .row.no-gutters 
                 .blog__head.col-xxl-6.col-lg-8.col-md-10.col-sm-11.col-12
-                    .section__header
+                    .section__header.--bg
                         .section__title.title.title--h2 Новое в блоге
                         p.section__text.text.text--body 
                             | Делимся профессиональными секретами и&nbsp;раскрываем 
