--- a/src/sections/portfolio/portfolio.pug
+++ b/src/sections/portfolio/portfolio.pug
@@ -3,7 +3,7 @@ mixin SectionPortfolio
         .container
             .row.no-gutters
                 .portfolio__head.col-xxl-9.col-lg-10.col-md-11.col-12
-                    .section__header
+                    .section__header.--bg
                         .section__title.title.title--h2 Наши проекты — наше имя
                         p.section__text.text.text--body 
                             | В&nbsp;портфолио собраны далеко не&nbsp;все выполненные нами проекты. 
