--- a/src/sections/services/services.pug
+++ b/src/sections/services/services.pug
@@ -8,7 +8,7 @@ mixin SectionServices()
         .container 
             .row.no-gutters
                 .services__head.col-xl-9.col-lg-10.col-md-11.col-12
-                    .section__header.--transparent
+                    .section__header.--transparent.--bg
                         .section__title.title.title--h2 Наши услуги
                         .section__title.title.title--h2 Наши услуги
                         p.section__text.text.text--body 
