--- a/src/sections/blog/blog.scss
+++ b/src/sections/blog/blog.scss
@@ -1,10 +1,13 @@
 .blog {
     position: relative;
-    margin-top: 60px;
+    margin-top: 30px;
     padding: 0;
     color: $textGray;
+    @media (min-width: 768px) {
+        margin-top: 75px;
+    }
     @media (min-width: 992px) {
-        margin-top: 55px;
+        margin-top: 60px;
     }
     @media (min-width: 1200px) {
         margin-top: 75px;
@@ -13,11 +16,6 @@
         position: relative;
         @media (min-width: 768px) {
             padding-bottom: 75px !important;
-        }
-    }
-    & .section__title {
-        @media (max-width: 767px) {
-            margin-bottom: 25px;
         }
     }
     &__head {
@@ -53,7 +51,7 @@
             margin-top: 68px;
         }
         @media (min-width: 1920px) {
-            margin-top: 95px;
+            margin-top: 97px;
         }
     }
     &__item {
@@ -122,7 +120,7 @@
         z-index: 1;
     }
     &__title {
-        margin-bottom: 44px;
+        margin-bottom: 45px;
         padding-right: 30px;
         font-size: 24px;
         line-height: 1.416;
