--- a/src/sections/services/services.scss
+++ b/src/sections/services/services.scss
@@ -1,9 +1,12 @@
 .services {
     margin-top: 30px;
     padding-top: 0;
-    padding-bottom: 90px;
+    padding-bottom: calc(90px - 22px);
     @media (min-width: 768px) {
         margin-top: 75px;
+    }
+    @media (min-width: 992px) {
+        padding-bottom: calc(90px - 37px);
     }
     & .section__video  {
         margin-top: 205px;
@@ -18,7 +21,7 @@
         }
     }
     &__list {
-        margin-top: 30px;
+        margin-top: 38px;
         @media (min-width: 992px) {
             margin-top: 37px;
         }
@@ -31,8 +34,8 @@
             position: relative;
             display: flex;
             flex-direction: column;
-            padding: 30px 0;
-            padding-right: 3% !important;
+            padding: 22px 0;
+            padding-right: 73px !important;
             color: $textWhite;
             transition: $transitionHeader;
             z-index: 2;
@@ -41,9 +44,7 @@
             }
             @media (min-width: 992px) {
                 padding: 37px 0;
-            }
-            @media (min-width: 1200px) {
-                padding-right: 8.5% !important;
+                padding-right: 100px !important;
             }
             &:hover {
                 color: $textWhite;
