--- a/src/sections/reviews/reviews.scss
+++ b/src/sections/reviews/reviews.scss
@@ -81,14 +81,14 @@
             padding: 60px 30px;
         }
         @media (min-width: 992px) {
-            height: 365px;
+            //height: 365px;
             padding: 60px 75px;
         }
         @media (min-width: 1200px) {
-            height: 495px;
+            //height: 495px;
         }
         @media (min-width: 1920px) {
-            height: 395px;
+            //height: 395px;
         }
     }
     &__link {
