--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -114,9 +114,9 @@ label {
 
 .page {
     &__layout {
-        padding: 61px 0 92px;
+        padding: 60px 0 90px;
         @media (min-width: 768px) {
-            padding: 91px 0 82px;
+            padding: 90px 0;
         }
         @media (min-width: 1200px) {
             padding: 97px 0 150px;
