--- a/src/components/formated/formated.scss
+++ b/src/components/formated/formated.scss
@@ -6,11 +6,13 @@
         margin: 60px 0 20px;
         font-family: 'HeroNew', Helvetica, Arial, sans-serif;
         font-weight: 800;
-        @media (min-width: 768px) {
-            margin: 75px 0 30px;
-        }
         &:first-child {
             margin-top: 0;
+        }
+    }
+    & h2, h3 {
+        @media (min-width: 768px) {
+            margin: 75px 0 30px;
         }
     }
     & h2 {
