--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -25,6 +25,6 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%, calc(-50% + 3px));
     }
 }
