--- a/src/sections/reviews/reviews.scss
+++ b/src/sections/reviews/reviews.scss
@@ -7,6 +7,13 @@
     }
 }
 
+.services + .reviews {
+    padding-top: 60px;
+    @media (min-width: 768px) {
+        padding-top: 90px;
+    }
+}
+
 .guarantee + .reviews {
     padding-top: 30px;
     @media (min-width: 768px) {
@@ -184,7 +191,7 @@
         }
     }
     &__brands {
-        margin-top: 30px;
+        margin-top: 60px;
         @media (min-width: 768px) {
             margin-top: 75px;
         }
